<resources>
    <string name="app_name">TO DO LIST</string>
    <string name="task_title">Task title</string>
    <string name="due_date">Due date</string>
    <string name="repeat">Repeat</string>
    <string name="title_new_task">New task</string>
    <string name="done">Done</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="tag">Tag</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remind">Remind</string>
    <string name="error_title">Enter task title!</string>
    <string name="tags">Tags</string>

    <string name="new_account_btn">Need a new account?</string>
    <string name="login_btn">Login</string>
    <string name="display_name">Display name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register_btn">Register</string>
    <string name="register_title">Create a new account</string>
    <string name="password_confirm">Confirm password</string>

    <string name="register_message_email_error">Email cannot be empty</string>
    <string name="register_message_displayname_error">Display name cannot be empty</string>
    <string name="register_message_password_error">Enter password</string>
    <string name="register_message_confirm_password_error">Enter confirm password</string>
    <string name="register_account_created">Account was created succefully</string>
    <string name="register_password_not_match">Passwords do not match</string>
    <string name="register_invalid_email_format">Enter email in the valid format</string>
    <string name="register_server_error">A general server error occured</string>
    <string name="create_new_account">Create a new accout</string>
    <string name="login_to_account">Login to your account</string>
    <string name="login_in_progress">Login in progress. Please wait...</string>
    <string name="register_in_progress">Creating account in progress. Please wait...</string>

    <string name="login_email_empty">Email field cannot be empty</string>
    <string name="login_password_empty">Password field cannot be empty</string>
    <string name="add_new_tag">Create a new tag</string>
    <string name="my_tasks">My tasks</string>
    <string name="snooze">Snooze</string>
    <string name="date_and_time">Date and time</string>
    <string name="yesterday">Yesterday</string>
    <string name="finished">Finished</string>

    <string name="clear_finished">Clear done</string>
    <string name="hide_finished">Hide done</string>
    <string name="remove">Remove</string>
    <string name="delete_task">Are you sure to delete task?</string>
    <string name="message_delete_task_success" formatted="false">Task %s was deleted succefully</string>
    <string name="message_delete_task_error">An error occurred during deleting task %s </string>
    <string name="show_done">Show done</string>
    <string name="clear_done">Clear done</string>
    <string name="no_tasks">No tasks</string>

</resources>
