<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssin.todolist.ui.register.view.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_login"
        android:textSize="25sp"
        android:text="@string/create_new_account"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/text_view_login"
        android:id="@+id/text_input_layout_display_name">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_input_layout_display_name"
        android:id="@+id/text_input_layout_email"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/text_input_layout_email"
        android:id="@+id/text_input_layout_password"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_input_layout_password"
        android:id="@+id/text_input_layout_confirm_password"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/text_input_layout_password">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/text_input_layout_confirm_password"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/register_btn"
        android:textColor="@color/white"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/red_600"
        android:textSize="20sp"
        android:visibility="gone" />


</RelativeLayout>
