<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssin.todolist.ui.splash.view.SplashActivity"
    android:background="@color/splash_background">

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_splash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/login_btn"
        android:layout_alignEnd="@id/text_view_app_name"
        android:layout_alignStart="@id/text_view_app_name"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_login"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/new_account_btn"
        android:layout_alignStart="@id/button_login"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/white" />

    <ImageView
        android:id="@+id/image_view_splash"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:src="@drawable/splash" />
</RelativeLayout>
