<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssin.todolist.ui.newtask.view.NewTaskActiivity"
    android:padding="16dp"
    android:background="@color/background_activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:id="@+id/text_view_task_title"
        style="@style/SectionText"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_task_title"
        android:layout_below="@id/text_view_task_title"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SectionText"
        android:text="@string/due_date"
        android:id="@+id/text_view_due_date"
        android:layout_below="@id/edit_text_task_title"/>

    <EditText
        android:id="@+id/edit_text_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_view_due_date"
        android:layout_toStartOf="@+id/image_button_pick_date"
        android:layout_marginBottom="4dp"
        android:inputType="date"/>

    <ImageButton
        android:id="@+id/image_button_pick_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_text_due_time"
        android:layout_alignEnd="@+id/edit_text_task_title"
        android:background="@color/transparent"
        android:padding="8dp"
        android:src="@drawable/ic_schedule_24dp" />

    <EditText
        android:id="@+id/edit_text_due_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_due_date"
        android:layout_toStartOf="@+id/image_button_pick_time"
        android:inputType="time"/>

    <ImageButton
        android:id="@+id/image_button_pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_text_due_date"
        android:layout_toEndOf="@+id/edit_text_due_time"
        android:background="@color/transparent"
        android:padding="8dp"
        android:src="@drawable/ic_today_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        style="@style/SectionText"
        android:id="@+id/text_view_repeat"
        android:layout_below="@id/image_button_pick_time"/>

    <Spinner
        android:id="@+id/spinner_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_view_repeat"
        android:layout_below="@id/text_view_repeat"
        android:layout_toStartOf="@+id/image_button_pick_time"
        android:layout_marginTop="4dp"/>


</RelativeLayout>
